# bens_chat

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  plan-jwt-auth.md  prod.yaml  push-to-dockerhub.sh  test-socket.js
.github/workflows/: deploy.yml
.qwen/: settings.json  settings.json.orig
backend/: Cargo.toml  Dockerfile  architecture.md  minio-cors.json  prod.yaml
backend/migrations/: 0001_data.sql  0002_add_minio_url.sql  0003_data.sql
backend/src/: auth.rs  main.rs
backend/src/models/: chat.rs  chat_participant.rs  message.rs  mis.rs  mod.rs  note.rs  user.rs
backend/tests/: test_utils.rs
chat-cli/: .gitignore  Cargo.toml  README.md  ddg_search.py  error.txt  token.txt
chat-cli/src/: main.rs
fastapi-template/: main.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  Chat.js  Login.js  Register.js
frontend/src/api/: api.js  api.test.js
frontend/src/components/: ChatList.js  ChatView.js  ChatView.test.js  CreateChat.js  Login.js  ResetPassword.js  SendMessage.js  SignUp.js
migrations/: 0001_data.sql
src/: auth.rs  main.rs
src/models/: conversation.rs  conversation_participant.rs  message.rs  mod.rs  user.rs  user_chat.rs
tests/: api_integration_tests.rs
