[package]
name = "chat-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

uuid = { version = "1.23.1", features = ["serde", "v4"] }

tokio = { version = "1", features = ["full", "time"] }
clap = { version = "4.5.56", features = ["derive"] }
